# telepathy-yell

./: .gitignore  Android.mk  COPYING  Makefile.am  NEWS  configure.ac
m4/: Makefile.am
spec/: Call_Stream_Interface_Media.xml  Makefile.am
telepathy-yell/: Makefile.am  base-call-channel.c  base-call-content.c  base-call-content.h  base-call-stream.c  base-call-stream.h  base-media-call-content.c  base-media-call-stream.c  base-media-call-stream.h  call-channel.c  call-channel.h  call-content-codec-offer.c  call-content-codec-offer.h  call-content-codecoffer.c  call-content-codecoffer.h  call-content.c  call-stream-endpoint.c  call-stream-endpoint.h  call-stream.c  call.xml  debug-internal.h  extensions-cli.c  extensions.h  telepathy-yell.h
tools/: Makefile.am
